Bug 255120 - [MemoryView] RenderingViewPane "leaks" IMemoryBlockRetrieval references